--- a/EntityFrameworiLoadingRelationData/EntityFrameworiLoadingRelationData.csproj
+++ b/EntityFrameworiLoadingRelationData/EntityFrameworiLoadingRelationData.csproj
@@ -33,7 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,11 +50,39 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseContext\UniversityDbContext.cs" />
+    <Compile Include="Migrations\201907231636228_Initial.cs" />
+    <Compile Include="Migrations\201907231636228_Initial.Designer.cs">
+      <DependentUpon>201907231636228_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201907231659062_Student_DepartmentId_ForeignKey_Added.cs" />
+    <Compile Include="Migrations\201907231659062_Student_DepartmentId_ForeignKey_Added.Designer.cs">
+      <DependentUpon>201907231659062_Student_DepartmentId_ForeignKey_Added.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201907232115051_Student_IsActive_Added.cs" />
+    <Compile Include="Migrations\201907232115051_Student_IsActive_Added.Designer.cs">
+      <DependentUpon>201907232115051_Student_IsActive_Added.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Department.cs" />
+    <Compile Include="Models\Student.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201907231636228_Initial.resx">
+      <DependentUpon>201907231636228_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201907231659062_Student_DepartmentId_ForeignKey_Added.resx">
+      <DependentUpon>201907231659062_Student_DepartmentId_ForeignKey_Added.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201907232115051_Student_IsActive_Added.resx">
+      <DependentUpon>201907232115051_Student_IsActive_Added.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
